--- a/index.html
+++ b/index.html
@@ -1,63 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
 
-  <body>
-    <header id="header">
-      <img
-        id="header-img"
-        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-      />
+<head>
+  <meta charset="UTF-8" />
+  <title>Fork Me! FCC: Test Suite Template</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-      <nav id="nav-bar">
-        <ul>
-          <li class="nav-link"><a>Features </a></li>
-          <li class="nav-link"><a>How It Works<a></li>
-          <li class="nav-link"><a>Pricing</a></li>
-        </ul>
-      </nav>
-    </header>
+<body>
+  <header id="header">
+    <img id="header-img"
+      src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" />
 
-    <main>
-      <section>
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
-          <input type="email" id="email" placeholder="Enter your email address"/>
-          <button type="submit" id="submit">Get Started</button>
-        </form>
-      </section>
-      <section>
+    <nav id="nav-bar">
+      <ul>
+        <li class="nav-link"><a>Features </a></li>
+        <li class="nav-link"><a>How It Works<a></li>
+        <li class="nav-link"><a>Pricing</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input type="email" id="email" placeholder="Enter your email address" />
+        <button type="submit" id="submit">Get Started</button>
+      </form>
+    </section>
+    <section>
       <div class="container">
         <div>
           <div><i class="fa fa-3x fa-fire"></i></div>
-        <div>
-          <h3>Premium Materials</h3>
-          <p>Our trombones use the shiFniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
-        </div>
+          <div>
+            <h3>Premium Materials</h3>
+            <p>Our trombones use the shiFniest brass which is sourced locally. This will increase the longevity of your
+              purchase.</p>
+          </div>
         </div>
         <div>
           <div><i class="fa fa-3x fa-truck"></i></div>
           <h3>Fast Sipping</h3>
-          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
+            if you are not satisfied.</p>
         </div>
         <div>
           <div><i class="fa fa-3x fa-battery-full" aria-hidden="true"></i></div>
           <h3>Quality Assurance</h3>
-          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+            pitch of your instrument.
           </p>
         </div>
       </div>
       <section>
-    </main>
+
+        <section class="video">
+          <iframe width="420" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&controls=0&showinfo=0">
+          </iframe>
+        </section>
+
+        <section class="add-to-cart">
+          <div class="cart">
+            <div class="cart-heading">
+              <h3>TENOR TROMBONE</h3>
+            </div>
+            <div class="cart-price">
+              <span>$600</span>
+            </div>
+            <div class="cart-text"><p>Lorem ipsum.
+              Lorem ipsum.
+              Lorem ipsum dolor.
+              Lorem ipsum.</p></div>
+            <div>
+              <button class="button">select</button>
+            </div>
+          </div>
+          <div class="cart">
+            <div class="cart-heading">
+              <h3>TENOR TROMBONE</h3>
+            </div>
+            <div class="cart-price">
+              <span>$600</span>
+            </div>
+            <div class="cart-text"><p>Lorem ipsum.
+              Lorem ipsum.
+              Lorem ipsum dolor.
+              Lorem ipsum.</p></div>
+            <div>
+              <button class="button">select</button>
+            </div>
+          </div>
+          <div class="cart">
+            <div class="cart-heading">
+              <h3>TENOR TROMBONE</h3>
+            </div>
+            <div class="cart-price">
+              <span>$600</span>
+            </div>
+            <div class="cart-text"><p>Lorem ipsum.
+              Lorem ipsum.
+              Lorem ipsum dolor.
+              Lorem ipsum.</p></div>
+            <div>
+              <button class="button">select</button>
+            </div>
+          </div>
+          <div class="cart">
+            <div class="cart-heading">
+              <h3>TENOR TROMBONE</h3>
+            </div>
+            <div class="cart-price">
+              <span>$600</span>
+            </div>
+            <div class="cart-text"><p>Lorem ipsum.
+              Lorem ipsum.
+              Lorem ipsum dolor.
+              Lorem ipsum.</p></div>
+            <div>
+              <button class="button">select</button>
+            </div>
+          </div>
+
+        </section>
+  </main>
 
 
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
+  <!--
 
     Hello Camper!
 
@@ -69,6 +141,7 @@
     - The freeCodeCamp Team
 
     -->
-    <script src="js/index.js"></script>
-  </body>
+  <script src="js/index.js"></script>
+</body>
+
 </html>
