--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 
 <body>
   <header id="header">
-    <img id="header-img"
+    <div class="logo">
+      <img id="header-img"
       src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" />
-
+    </div>
     <nav id="nav-bar">
       <ul>
         <li class="nav-link"><a>Features </a></li>
-        <li class="nav-link"><a>How It Works<a></li>
+        <li class="nav-link"><a>How It Works</a></li>
         <li class="nav-link"><a>Pricing</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section>
+    <section class="hero">
+      <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <input type="email" id="email" placeholder="Enter your email address" />
         <button type="submit" id="submit">Get Started</button>
