--- a/index.html
+++ b/index.html
@@ -33,27 +33,37 @@
       </form>
     </section>
     <section>
-      <div class="container">
-        <div>
+      <div class="feature-list-wapper">
+        <!-- <div class="feature-list">
           <div><i class="fa fa-3x fa-fire"></i></div>
-          <div>
             <h3>Premium Materials</h3>
             <p>Our trombones use the shiFniest brass which is sourced locally. This will increase the longevity of your
               purchase.</p>
+        </div> -->
+        <div class="feature-list">
+          <div><i class="fa fa-3x fa-fire"></i></div>
+          <div class="premium">
+            <h3>Premium Materials</h3>
+          <p>Our trombones use the shiFniest brass which is sourced locally. This will increase the longevity of your
+            purchase.</p>
           </div>
         </div>
-        <div>
+        <div class="feature-list">
           <div><i class="fa fa-3x fa-truck"></i></div>
+         <div class="premium">
           <h3>Fast Sipping</h3>
           <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
             if you are not satisfied.</p>
+         </div>
         </div>
-        <div>
+        <div class="feature-list">
           <div><i class="fa fa-3x fa-battery-full" aria-hidden="true"></i></div>
-          <h3>Quality Assurance</h3>
+          <div class="premium">
+            <h3>Quality Assurance</h3>
           <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
             pitch of your instrument.
           </p>
+          </div>
         </div>
       </div>
       <section>
